Fix vertical spacing + add border to court rules > updates in footer

--- a/styleguide/source/assets/scss/02-molecules/_listing-table.scss
+++ b/styleguide/source/assets/scss/02-molecules/_listing-table.scss
@@ -113,4 +113,9 @@
       }
     }
   }
+
+  .main-content .ma__header-tags + & {
+    border-top: 1px solid;
+    margin-top: .5em;
+  }
 }
