--- a/styleguide/source/assets/scss/06-theme/02-molecules/_listing-table.scss
+++ b/styleguide/source/assets/scss/06-theme/02-molecules/_listing-table.scss
@@ -10,4 +10,8 @@
       font-weight: 500;
     }
   }
+
+  .main-content .ma__header-tags + & {
+    border-color: $c-bd-divider;
+  }
 }
